Updated sponsors for 2016 edition

--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -9,66 +9,74 @@
     a { display: block; height: 100%; width: 100%; }
   }
 
-  .sponsor-ab                { background-image: url('../images/sponsors/auspiciante_ab_hover.png'); }
-  .sponsor-bsasciudad        { background-image: url('../images/sponsors/auspiciante_bsasciudad_hover.png'); }
-  .sponsor-campari           { background-image: url('../images/sponsors/auspiciante_campari_hover.png'); }
-  .sponsor-cinefania         { background-image: url('../images/sponsors/auspiciante_cinefania_hover.png'); }
-  .sponsor-circodelhorror    { background-image: url('../images/sponsors/auspiciante_circodelhorror_hover.png'); }
-  .sponsor-cunnington        { background-image: url('../images/sponsors/auspiciante_cunnington_hover.png'); }
-  .sponsor-eda               { background-image: url('../images/sponsors/auspiciante_eda_hover.png'); }
-  .sponsor-fantafestivales   { background-image: url('../images/sponsors/auspiciante_fantafestivales_hover.png'); }
-  .sponsor-festeringslime    { background-image: url('../images/sponsors/auspiciante_festeringslime_hover.png'); }
-  .sponsor-filmsharks        { background-image: url('../images/sponsors/auspiciante_filmsharks_hover.png'); }
-  .sponsor-findlingfilms     { background-image: url('../images/sponsors/auspiciante_findlingfilms_hover.png'); }
-  .sponsor-flaviogrecopaglia { background-image: url('../images/sponsors/auspiciante_flaviogrecopaglia_hover.png'); }
-  .sponsor-illusiondreamsfx  { background-image: url('../images/sponsors/auspiciante_illusiondreamsfx_hover.png'); }
-  .sponsor-incaa             { background-image: url('../images/sponsors/auspiciante_incaa_hover.png'); }
-  .sponsor-incaagerencia     { background-image: url('../images/sponsors/auspiciante_incaagerencia_hover.png'); }
-  .sponsor-lacripta          { background-image: url('../images/sponsors/auspiciante_lacripta_hover.png'); }
-  .sponsor-leonardofavio     { background-image: url('../images/sponsors/auspiciante_leonardofavio_hover.png'); }
-  .sponsor-metamorfosisfx    { background-image: url('../images/sponsors/auspiciante_metamorfosisfx_hover.png'); }
-  .sponsor-multiplex         { background-image: url('../images/sponsors/auspiciante_multiplex_hover.png'); }
-  .sponsor-nacionalrock      { background-image: url('../images/sponsors/auspiciante_nacionalrock_hover.png'); }
-  .sponsor-piromaniafx       { background-image: url('../images/sponsors/auspiciante_piromaniafx_hover.png'); }
-  .sponsor-quintadimension   { background-image: url('../images/sponsors/auspiciante_quintadimension_hover.png'); }
-  .sponsor-rafma             { background-image: url('../images/sponsors/auspiciante_rafma_hover.png'); }
-  .sponsor-rentalbsas        { background-image: url('../images/sponsors/auspiciante_rentalbsas_hover.png'); }
-  .sponsor-requiem           { background-image: url('../images/sponsors/auspiciante_requiem_hover.png'); }
-  .sponsor-ticoral           { background-image: url('../images/sponsors/auspiciante_ticoral_hover.png'); }
-  .sponsor-toronja           { background-image: url('../images/sponsors/auspiciante_toronja_hover.png'); }
-  .sponsor-vacomoloco        { background-image: url('../images/sponsors/auspiciante_vacomoloco_hover.png'); }
-  .sponsor-videoflims        { background-image: url('../images/sponsors/auspiciante_videoflims_hover.png'); }
-  .sponsor-wancamp           { background-image: url('../images/sponsors/auspiciante_wancamp.png'); }
+  .sponsor-ab                    { background-image: url('../images/sponsors/auspiciante_ab_hover.png'); }
+  .sponsor-bsasciudad            { background-image: url('../images/sponsors/auspiciante_bsasciudad_hover.png'); }
+  .sponsor-campari               { background-image: url('../images/sponsors/auspiciante_campari_hover.png'); }
+  .sponsor-cinefania             { background-image: url('../images/sponsors/auspiciante_cinefania_hover.png'); }
+  .sponsor-circodelhorror        { background-image: url('../images/sponsors/auspiciante_circodelhorror_hover.png'); }
+  .sponsor-cunnington            { background-image: url('../images/sponsors/auspiciante_cunnington_hover.png'); }
+  .sponsor-eda                   { background-image: url('../images/sponsors/auspiciante_eda_hover.png'); }
+  .sponsor-fantafestivales       { background-image: url('../images/sponsors/auspiciante_fantafestivales_hover.png'); }
+  .sponsor-festeringslime        { background-image: url('../images/sponsors/auspiciante_festeringslime_hover.png'); }
+  .sponsor-filmsharks            { background-image: url('../images/sponsors/auspiciante_filmsharks_hover.png'); }
+  .sponsor-findlingfilms         { background-image: url('../images/sponsors/auspiciante_findlingfilms_hover.png'); }
+  .sponsor-flaviogrecopaglia     { background-image: url('../images/sponsors/auspiciante_flaviogrecopaglia_hover.png'); }
+  .sponsor-illusiondreamsfx      { background-image: url('../images/sponsors/auspiciante_illusiondreamsfx_hover.png'); }
+  .sponsor-incaa                 { background-image: url('../images/sponsors/auspiciante_incaa_hover.png'); }
+  .sponsor-incaagerencia         { background-image: url('../images/sponsors/auspiciante_incaagerencia_hover.png'); }
+  .sponsor-lacripta              { background-image: url('../images/sponsors/auspiciante_lacripta_hover.png'); }
+  .sponsor-metamorfosisfx        { background-image: url('../images/sponsors/auspiciante_metamorfosisfx_hover.png'); }
+  .sponsor-multiplex             { background-image: url('../images/sponsors/auspiciante_multiplex_hover.png'); }
+  .sponsor-nacionalrock          { background-image: url('../images/sponsors/auspiciante_nacionalrock_hover.png'); }
+  .sponsor-piromaniafx           { background-image: url('../images/sponsors/auspiciante_piromaniafx_hover.png'); }
+  .sponsor-quintadimension       { background-image: url('../images/sponsors/auspiciante_quintadimension_hover.png'); }
+  .sponsor-rafma                 { background-image: url('../images/sponsors/auspiciante_rafma_hover.png'); }
+  .sponsor-rentalbsas            { background-image: url('../images/sponsors/auspiciante_rentalbsas_hover.png'); }
+  .sponsor-requiem               { background-image: url('../images/sponsors/auspiciante_requiem_hover.png'); }
+  .sponsor-ticoral               { background-image: url('../images/sponsors/auspiciante_ticoral_hover.png'); }
+  .sponsor-toronja               { background-image: url('../images/sponsors/auspiciante_toronja_hover.png'); }
+  .sponsor-vacomoloco            { background-image: url('../images/sponsors/auspiciante_vacomoloco_hover.png'); }
+  .sponsor-videoflims            { background-image: url('../images/sponsors/auspiciante_videoflims_hover.png'); }
+  .sponsor-wancamp               { background-image: url('../images/sponsors/auspiciante_wancamp_hover.png'); }
+  .sponsor-aclf                  { background-image: url('../images/sponsors/auspiciante_aclf_hover.png'); }
+  .sponsor-apima                 { background-image: url('../images/sponsors/auspiciante_apima_hover.png'); }
+  .sponsor-marginadoproducciones { background-image: url('../images/sponsors/auspiciante_marginadoproducciones_hover.png'); }
+  .sponsor-mdpff                 { background-image: url('../images/sponsors/auspiciante_mdpff_hover.png'); }
+  .sponsor-rebisfx               { background-image: url('../images/sponsors/auspiciante_rebisfx_hover.png'); }
 
-  .sponsor-ab:hover                { background-image: url('../images/sponsors/auspiciante_ab.png'); }
-  .sponsor-bsasciudad:hover        { background-image: url('../images/sponsors/auspiciante_bsasciudad.png'); }
-  .sponsor-campari:hover           { background-image: url('../images/sponsors/auspiciante_campari.png'); }
-  .sponsor-cinefania:hover         { background-image: url('../images/sponsors/auspiciante_cinefania.png'); }
-  .sponsor-circodelhorror:hover    { background-image: url('../images/sponsors/auspiciante_circodelhorror.png'); }
-  .sponsor-cunnington:hover        { background-image: url('../images/sponsors/auspiciante_cunnington.png'); }
-  .sponsor-eda:hover               { background-image: url('../images/sponsors/auspiciante_eda.png'); }
-  .sponsor-fantafestivales:hover   { background-image: url('../images/sponsors/auspiciante_fantafestivales.png'); }
-  .sponsor-festeringslime:hover    { background-image: url('../images/sponsors/auspiciante_festeringslime.png'); }
-  .sponsor-filmsharks:hover        { background-image: url('../images/sponsors/auspiciante_filmsharks.png'); }
-  .sponsor-findlingfilms:hover     { background-image: url('../images/sponsors/auspiciante_findlingfilms.png'); }
-  .sponsor-flaviogrecopaglia:hover { background-image: url('../images/sponsors/auspiciante_flaviogrecopaglia.png'); }
-  .sponsor-illusiondreamsfx:hover  { background-image: url('../images/sponsors/auspiciante_illusiondreamsfx.png'); }
-  .sponsor-incaa:hover             { background-image: url('../images/sponsors/auspiciante_incaa.png'); }
-  .sponsor-incaagerencia:hover     { background-image: url('../images/sponsors/auspiciante_incaagerencia.png'); }
-  .sponsor-lacripta:hover          { background-image: url('../images/sponsors/auspiciante_lacripta.png'); }
-  .sponsor-leonardofavio:hover     { background-image: url('../images/sponsors/auspiciante_leonardofavio.png'); }
-  .sponsor-metamorfosisfx:hover    { background-image: url('../images/sponsors/auspiciante_metamorfosisfx.png'); }
-  .sponsor-multiplex:hover         { background-image: url('../images/sponsors/auspiciante_multiplex.png'); }
-  .sponsor-nacionalrock:hover      { background-image: url('../images/sponsors/auspiciante_nacionalrock.png'); }
-  .sponsor-piromaniafx:hover       { background-image: url('../images/sponsors/auspiciante_piromaniafx.png'); }
-  .sponsor-quintadimension:hover   { background-image: url('../images/sponsors/auspiciante_quintadimension.png'); }
-  .sponsor-rafma:hover             { background-image: url('../images/sponsors/auspiciante_rafma.png'); }
-  .sponsor-rentalbsas:hover        { background-image: url('../images/sponsors/auspiciante_rentalbsas.png'); }
-  .sponsor-requiem:hover           { background-image: url('../images/sponsors/auspiciante_requiem.png'); }
-  .sponsor-ticoral:hover           { background-image: url('../images/sponsors/auspiciante_ticoral.png'); }
-  .sponsor-toronja:hover           { background-image: url('../images/sponsors/auspiciante_toronja.png'); }
-  .sponsor-vacomoloco:hover        { background-image: url('../images/sponsors/auspiciante_vacomoloco.png'); }
-  .sponsor-videoflims:hover        { background-image: url('../images/sponsors/auspiciante_videoflims.png'); }
-  .sponsor-wancamp:hover           { background-image: url('../images/sponsors/auspiciante_wancamp.png'); }
+  .sponsor-ab:hover                    { background-image: url('../images/sponsors/auspiciante_ab.png'); }
+  .sponsor-bsasciudad:hover            { background-image: url('../images/sponsors/auspiciante_bsasciudad.png'); }
+  .sponsor-campari:hover               { background-image: url('../images/sponsors/auspiciante_campari.png'); }
+  .sponsor-cinefania:hover             { background-image: url('../images/sponsors/auspiciante_cinefania.png'); }
+  .sponsor-circodelhorror:hover        { background-image: url('../images/sponsors/auspiciante_circodelhorror.png'); }
+  .sponsor-cunnington:hover            { background-image: url('../images/sponsors/auspiciante_cunnington.png'); }
+  .sponsor-eda:hover                   { background-image: url('../images/sponsors/auspiciante_eda.png'); }
+  .sponsor-fantafestivales:hover       { background-image: url('../images/sponsors/auspiciante_fantafestivales.png'); }
+  .sponsor-festeringslime:hover        { background-image: url('../images/sponsors/auspiciante_festeringslime.png'); }
+  .sponsor-filmsharks:hover            { background-image: url('../images/sponsors/auspiciante_filmsharks.png'); }
+  .sponsor-findlingfilms:hover         { background-image: url('../images/sponsors/auspiciante_findlingfilms.png'); }
+  .sponsor-flaviogrecopaglia:hover     { background-image: url('../images/sponsors/auspiciante_flaviogrecopaglia.png'); }
+  .sponsor-illusiondreamsfx:hover      { background-image: url('../images/sponsors/auspiciante_illusiondreamsfx.png'); }
+  .sponsor-incaa:hover                 { background-image: url('../images/sponsors/auspiciante_incaa.png'); }
+  .sponsor-incaagerencia:hover         { background-image: url('../images/sponsors/auspiciante_incaagerencia.png'); }
+  .sponsor-lacripta:hover              { background-image: url('../images/sponsors/auspiciante_lacripta.png'); }
+  .sponsor-metamorfosisfx:hover        { background-image: url('../images/sponsors/auspiciante_metamorfosisfx.png'); }
+  .sponsor-multiplex:hover             { background-image: url('../images/sponsors/auspiciante_multiplex.png'); }
+  .sponsor-nacionalrock:hover          { background-image: url('../images/sponsors/auspiciante_nacionalrock.png'); }
+  .sponsor-piromaniafx:hover           { background-image: url('../images/sponsors/auspiciante_piromaniafx.png'); }
+  .sponsor-quintadimension:hover       { background-image: url('../images/sponsors/auspiciante_quintadimension.png'); }
+  .sponsor-rafma:hover                 { background-image: url('../images/sponsors/auspiciante_rafma.png'); }
+  .sponsor-rentalbsas:hover            { background-image: url('../images/sponsors/auspiciante_rentalbsas.png'); }
+  .sponsor-requiem:hover               { background-image: url('../images/sponsors/auspiciante_requiem.png'); }
+  .sponsor-ticoral:hover               { background-image: url('../images/sponsors/auspiciante_ticoral.png'); }
+  .sponsor-toronja:hover               { background-image: url('../images/sponsors/auspiciante_toronja.png'); }
+  .sponsor-vacomoloco:hover            { background-image: url('../images/sponsors/auspiciante_vacomoloco.png'); }
+  .sponsor-videoflims:hover            { background-image: url('../images/sponsors/auspiciante_videoflims.png'); }
+  .sponsor-wancamp:hover               { background-image: url('../images/sponsors/auspiciante_wancamp.png'); }
+  .sponsor-aclf:hover                  { background-image: url('../images/sponsors/auspiciante_aclf.png'); }
+  .sponsor-apima:hover                 { background-image: url('../images/sponsors/auspiciante_apima.png'); }
+  .sponsor-marginadoproducciones:hover { background-image: url('../images/sponsors/auspiciante_marginadoproducciones.png'); }
+  .sponsor-mdpff:hover                 { background-image: url('../images/sponsors/auspiciante_mdpff.png'); }
+  .sponsor-rebisfx:hover               { background-image: url('../images/sponsors/auspiciante_rebisfx.png'); }
 
 }
