Fixes for 2017 edition

--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -22,6 +22,8 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #header-info .left, #header-info .right, #header-info .center { vertical-align: middle; display: table-cell; }
 #header-info .left, #header-info .right { width: 350px; }
 #header-info .center { padding: 0 15px; }
+#header-info table tbody td { font-size: 7pt; line-height: 4pt; }
+#header-info table thead th { line-height: 10pt; }
 #header-clouds { height: 31px; width: 100%; background: url('../images/scratchs_2.png') 0px 1px; background-repeat-y: inherit; }
 #header-social {
   text-align: center;
