Added PICSI logo and new logo for Cunnington

--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -43,6 +43,7 @@
   .sponsor-marginadoproducciones { background-image: url('../images/sponsors/auspiciante_marginadoproducciones_hover.png'); }
   .sponsor-mdpff                 { background-image: url('../images/sponsors/auspiciante_mdpff_hover.png'); }
   .sponsor-rebisfx               { background-image: url('../images/sponsors/auspiciante_rebisfx_hover.png'); }
+  .sponsor-picsi                 { background-image: url('../images/sponsors/auspiciante_picsi_hover.png'); }
 
   .sponsor-ab:hover                    { background-image: url('../images/sponsors/auspiciante_ab.png'); }
   .sponsor-bsasciudad:hover            { background-image: url('../images/sponsors/auspiciante_bsasciudad.png'); }
@@ -78,5 +79,6 @@
   .sponsor-marginadoproducciones:hover { background-image: url('../images/sponsors/auspiciante_marginadoproducciones.png'); }
   .sponsor-mdpff:hover                 { background-image: url('../images/sponsors/auspiciante_mdpff.png'); }
   .sponsor-rebisfx:hover               { background-image: url('../images/sponsors/auspiciante_rebisfx.png'); }
+  .sponsor-picsi:hover                { background-image: url('../images/sponsors/auspiciante_picsi.png'); }
 
 }
