--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -44,6 +44,7 @@
   .sponsor-mdpff                 { background-image: url('../images/sponsors/auspiciante_mdpff_hover.png'); }
   .sponsor-rebisfx               { background-image: url('../images/sponsors/auspiciante_rebisfx_hover.png'); }
   .sponsor-picsi                 { background-image: url('../images/sponsors/auspiciante_picsi_hover.png'); }
+  .sponsor-osde                  { background-image: url('../images/sponsors/auspiciante_osde_hover.png'); }
 
   .sponsor-ab:hover                    { background-image: url('../images/sponsors/auspiciante_ab.png'); }
   .sponsor-bsasciudad:hover            { background-image: url('../images/sponsors/auspiciante_bsasciudad.png'); }
@@ -79,6 +80,7 @@
   .sponsor-marginadoproducciones:hover { background-image: url('../images/sponsors/auspiciante_marginadoproducciones.png'); }
   .sponsor-mdpff:hover                 { background-image: url('../images/sponsors/auspiciante_mdpff.png'); }
   .sponsor-rebisfx:hover               { background-image: url('../images/sponsors/auspiciante_rebisfx.png'); }
-  .sponsor-picsi:hover                { background-image: url('../images/sponsors/auspiciante_picsi.png'); }
+  .sponsor-picsi:hover                 { background-image: url('../images/sponsors/auspiciante_picsi.png'); }
+  .sponsor-osde:hover                  { background-image: url('../images/sponsors/auspiciante_osde.png'); }
 
 }
