Fixed OSDE logo

--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -9,6 +9,10 @@
     a { display: block; height: 100%; width: 100%; }
   }
 
+  .sponsor-osde {
+    width: 300px;
+  }
+
   .sponsor-ab                    { background-image: url('../images/sponsors/auspiciante_ab_hover.png'); }
   .sponsor-bsasciudad            { background-image: url('../images/sponsors/auspiciante_bsasciudad_hover.png'); }
   .sponsor-campari               { background-image: url('../images/sponsors/auspiciante_campari_hover.png'); }
