More logos for BARS 2017

--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -49,6 +49,9 @@
   .sponsor-rebisfx               { background-image: url('../images/sponsors/auspiciante_rebisfx_hover.png'); }
   .sponsor-picsi                 { background-image: url('../images/sponsors/auspiciante_picsi_hover.png'); }
   .sponsor-osde                  { background-image: url('../images/sponsors/auspiciante_osde_hover.png'); }
+  .sponsor-guiar                 { background-image: url('../images/sponsors/auspiciante_guiar_hover.png'); }
+  .sponsor-manicomiodelterror    { background-image: url('../images/sponsors/auspiciante_manicomio_del_terror_hover.png'); }
+  .sponsor-purga                 { background-image: url('../images/sponsors/auspiciante_purga_hover.png'); }
 
   .sponsor-ab:hover                    { background-image: url('../images/sponsors/auspiciante_ab.png'); }
   .sponsor-bsasciudad:hover            { background-image: url('../images/sponsors/auspiciante_bsasciudad.png'); }
@@ -86,5 +89,8 @@
   .sponsor-rebisfx:hover               { background-image: url('../images/sponsors/auspiciante_rebisfx.png'); }
   .sponsor-picsi:hover                 { background-image: url('../images/sponsors/auspiciante_picsi.png'); }
   .sponsor-osde:hover                  { background-image: url('../images/sponsors/auspiciante_osde.png'); }
+  .sponsor-guiar:hover                 { background-image: url('../images/sponsors/auspiciante_guiar.png'); }
+  .sponsor-manicomiodelterror:hover    { background-image: url('../images/sponsors/auspiciante_manicomio_del_terror.png'); }
+  .sponsor-purga:hover                 { background-image: url('../images/sponsors/auspiciante_purga.png'); }
 
 }
