Added 'venues' to editions

--- a/assets/stylesheets/text.less
+++ b/assets/stylesheets/text.less
@@ -98,7 +98,7 @@
     }
     .movie-posts { font-family: 'Oswald'; color: white; }
     .movie-post .movie-post-hour { text-shadow: 1px 1px 0.1em black; font-weight: bold; }
-    .movie-posts .movie-post .movie-post-section { text-shadow: 1px 1px 0.1em black; font-size: 7.5pt; }
+    .movie-posts .movie-post .movie-post-section, .movie-posts .movie-post .movie-post-venue { text-shadow: 1px 1px 0.1em black; font-size: 7.5pt; }
     .movie-post .movie-post-title { font-size: 12pt; }
     .movie-post .movie-post-info { font-size: 9pt; }
     .movie-post a { text-decoration: none; color: #bbbbbb; }
