--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -209,6 +209,7 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-selection .schedule-day .movie-post .movie-post-hour { top: 0; z-index: 1; position: absolute; right: 0; padding: 2px 5px; background-color: rgba(180,10,0,0.8); }
 #page-selection .schedule-day .movie-post .movie-post-thumbnail { position: relative; }
 #page-selection .schedule-day .movie-post .movie-post-section { position: absolute; left: 0; bottom: 0; background-color: rgba(180, 10, 0, 0.8); padding: 0 5px; }
+#page-selection .schedule-day .movie-post .movie-post-venue { position: absolute; left: 0; bottom: 17px; background-color: rgba(180, 10, 0, 0.8); padding: 0 5px; }
 #page-selection .schedule-day .movie-post .movie-post-title-container { min-height: 45px; }
 #page-selection .schedule-day .movie-post .movie-post-title { max-height: 35px; }
 #page-selection .schedule-day .movie-post .movie-post-title,
