Added dates for 2018 edition + instagram logo + removed some sponsors + use year for festival identification

--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -33,6 +33,7 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
     color: #333;
     &:hover {
       text-decoration: none; // Override decoration from links.less
+      .fa-instagram { color: #cd486b; }
       .fa-facebook-square { color: #3b5998; }
       .fa-twitter-square { color: #00aced; }
       .fa-youtube-square { color: #c4302b; }
