--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -52,7 +52,16 @@
   .sponsor-guiar                 { background-image: url('../images/sponsors/auspiciante_guiar_hover.png'); }
   .sponsor-manicomiodelterror    { background-image: url('../images/sponsors/auspiciante_manicomio_del_terror_hover.png'); }
   .sponsor-purga                 { background-image: url('../images/sponsors/auspiciante_purga_hover.png'); }
-
+  .sponsor-argentores            { background-image: url('../images/sponsors/auspiciante_argentores_hover.png'); }
+  .sponsor-embajada-espana       { background-image: url('../images/sponsors/auspiciante_embajada_espana_hover.png'); }
+  .sponsor-insomnio              { background-image: url('../images/sponsors/auspiciante_insomnio_hover.png'); }
+  .sponsor-cfyb                  { background-image: url('../images/sponsors/auspiciante_cfyb_hover.png'); }
+  .sponsor-fan                   { background-image: url('../images/sponsors/auspiciante_fan_hover.png'); }
+  .sponsor-tvcortos              { background-image: url('../images/sponsors/auspiciante_tvcortos_hover.png'); }
+  .sponsor-monster-flex          { background-image: url('../images/sponsors/auspiciante_monster_flex_hover.png'); }
+  .sponsor-netfis                { background-image: url('../images/sponsors/auspiciante_netfis_hover.png'); }
+  .sponsor-global-media          { background-image: url('../images/sponsors/auspiciante_global_media_hover.png'); }
+|
   .sponsor-ab:hover                    { background-image: url('../images/sponsors/auspiciante_ab.png'); }
   .sponsor-bsasciudad:hover            { background-image: url('../images/sponsors/auspiciante_bsasciudad.png'); }
   .sponsor-campari:hover               { background-image: url('../images/sponsors/auspiciante_campari.png'); }
@@ -92,5 +101,14 @@
   .sponsor-guiar:hover                 { background-image: url('../images/sponsors/auspiciante_guiar.png'); }
   .sponsor-manicomiodelterror:hover    { background-image: url('../images/sponsors/auspiciante_manicomio_del_terror.png'); }
   .sponsor-purga:hover                 { background-image: url('../images/sponsors/auspiciante_purga.png'); }
+  .sponsor-argentores:hover            { background-image: url('../images/sponsors/auspiciante_argentores.png'); }
+  .sponsor-embajada-espana:hover       { background-image: url('../images/sponsors/auspiciante_embajada_espana.png'); }
+  .sponsor-insomnio:hover              { background-image: url('../images/sponsors/auspiciante_insomnio.png'); }
+  .sponsor-cfyb:hover                  { background-image: url('../images/sponsors/auspiciante_cfyb.png'); }
+  .sponsor-fan:hover                   { background-image: url('../images/sponsors/auspiciante_fan.png'); }
+  .sponsor-tvcortos:hover              { background-image: url('../images/sponsors/auspiciante_tvcortos.png'); }
+  .sponsor-monster-flex:hover          { background-image: url('../images/sponsors/auspiciante_monster_flex.png'); }
+  .sponsor-netfis:hover                { background-image: url('../images/sponsors/auspiciante_netfis.png'); }
+  .sponsor-global-media:hover          { background-image: url('../images/sponsors/auspiciante_global_media.png'); }
 
 }
