Added call + details for 2019 edition

--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -107,6 +107,7 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-juries .content { padding: 10px 40px; }
 #page-juries .awards { background: rgba(25,25,25,0.5); border-radius: 5px; padding: 10px; }
 #page-juries .awards tr th, #page-juries .awards tr td { text-align: center; width: 50%; }
+#page-juries .no-juries-yet { font-family: Oswald; text-align: center; color: #CECECE; margin-bottom: 20px; }
 #page-juries .jury { clear: both; margin: 0 30px 15px 50px; padding: 10px 10px 5px 10px; border-top: 1px solid gray; background: rgba(25,25,25,0.5); border-radius: 5px; }
 #page-juries .jury .jury-image { float: left; width: 150px; height: 150px; border-radius: 50%; margin: 0 10px 10px 0; overflow: hidden; }
 #page-juries .jury .jury-info { padding-right: 10px; line-height: 1.5; }
