Added Brujas, Museo Sarmiento and Pintafan sponsors for BARS 20

--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -61,6 +61,9 @@
   .sponsor-monster-flex          { background-image: url('../images/sponsors/auspiciante_monster_flex_hover.png'); }
   .sponsor-netfis                { background-image: url('../images/sponsors/auspiciante_netfis_hover.png'); }
   .sponsor-global-media          { background-image: url('../images/sponsors/auspiciante_global_media_hover.png'); }
+  .sponsor-brujas                { background-image: url('../images/sponsors/auspiciante_brujas.png'); }
+  .sponsor-museo-sarmiento       { background-image: url('../images/sponsors/auspiciante_museo_sarmiento.png'); }
+  .sponsor-pintafan              { background-image: url('../images/sponsors/auspiciante_pintafan.png'); }
 |
   .sponsor-ab:hover                    { background-image: url('../images/sponsors/auspiciante_ab.png'); }
   .sponsor-bsasciudad:hover            { background-image: url('../images/sponsors/auspiciante_bsasciudad.png'); }
@@ -110,5 +113,8 @@
   .sponsor-monster-flex:hover          { background-image: url('../images/sponsors/auspiciante_monster_flex.png'); }
   .sponsor-netfis:hover                { background-image: url('../images/sponsors/auspiciante_netfis.png'); }
   .sponsor-global-media:hover          { background-image: url('../images/sponsors/auspiciante_global_media.png'); }
+  .sponsor-brujas:hover                { background-image: url('../images/sponsors/auspiciante_brujas_hover.png'); }
+  .sponsor-museo-sarmiento:hover       { background-image: url('../images/sponsors/auspiciante_museo_sarmiento_hover.png'); }
+  .sponsor-pintafan:hover              { background-image: url('../images/sponsors/auspiciante_pintafan_hover.png'); }
 
 }
