--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -207,15 +207,14 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 #page-selection .schedule-day.even { background-color: transparent; }
 #page-selection .schedule-day .schedule-day-info { width: 90px; text-align: center; float: left; }
 #page-selection .schedule-day .movie-posts { overflow: hidden; }
-#page-selection .schedule-day .movie-post { width: 160px; }
+#page-selection .schedule-day .movie-post { width: 160px; min-height: 170px; }
 #page-selection .schedule-day .movie-post .movie-post-hour { top: 0; z-index: 1; position: absolute; right: 0; padding: 2px 5px; background-color: rgba(180,10,0,0.8); }
 #page-selection .schedule-day .movie-post .movie-post-thumbnail { position: relative; }
 #page-selection .schedule-day .movie-post .movie-post-section { position: absolute; left: 0; bottom: 0; background-color: rgba(180, 10, 0, 0.8); padding: 0 5px; }
 #page-selection .schedule-day .movie-post .movie-post-venue { position: absolute; left: 0; bottom: 17px; background-color: rgba(180, 10, 0, 0.8); padding: 0 5px; }
-#page-selection .schedule-day .movie-post .movie-post-title-container { min-height: 45px; }
-#page-selection .schedule-day .movie-post .movie-post-title { max-height: 35px; }
-#page-selection .schedule-day .movie-post .movie-post-title,
-#page-selection .schedule-day .movie-post .movie-post-info { padding: 0 0 0 2px; }
+#page-selection .schedule-day .movie-post .movie-post-title-container { min-height: 65px; padding: 4px; }
+#page-selection .schedule-day .movie-post .movie-post-title { line-height: 14pt; }
+#page-selection .schedule-day .movie-post .movie-post-info { margin-top: 6px; }
 #page-selection .schedule-day .movie-post { position: relative; border: 1px solid rgba(255,255,255,0.1); float: left; margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; }
 #page-selection .schedule-day .movie-post:hover { background-color: rgba(0,0,0,1); opacity: 1; }
 
@@ -249,16 +248,18 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
 .movieblock .movie-selectors .movie-post { border: 1px solid rgba(255,255,255,0.1); margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; }
 .movieblock .movie-selectors .movie-post:hover { cursor: pointer; background-color: rgba(0,0,0,1); opacity: 1; }
 .movieblock .movie-selectors .movie-post .movie-post-thumbnail { position: relative; text-align: center; width: auto; }
-.movieblock .movie-selectors .movie-post .movie-post-title { width: 145px; padding: 0 0 0 2px; }
-.movieblock .movie-selectors .movie-post .movie-post-info { padding: 0 0 0 2px; }
+.movieblock .movie-selectors .movie-post .movie-post-title { width: 145px; line-height: 12pt; }
+.movieblock .movie-selectors .movie-post .movie-post-info { margin-top: 6px; }
 .movieblock .movie-selectors .movie-post { width: 160px; }
 
 .movieblock .movie-info-displayer { position: relative; overflow-y: auto; overflow-x: hidden; height: 400px; padding: 0 10px; }
 .movieblock .movie-info-displayer .scratch { margin: 15px 0; }
 .movieblock .movie-info-displayer .image { float: right; padding: 0; }
+.movieblock .movie-info-displayer .image img { height: 80px; width: auto; }
 .movieblock .movie-info-displayer .info { overflow: hidden; }
 .movieblock .movie-info-displayer .info .title { width: 260px; }
 .movieblock .movie-info-displayer .info .directors { padding-top: 10px; }
+.movieblock .movie-info-displayer .synopsis { clear: both; }
 .movieblock .movie-info-displayer .trailer-container { height: 300px; }
 
 /* Movieblock scrollbars */
