Added remaining 2019 sponsors

--- a/assets/stylesheets/sponsors.less
+++ b/assets/stylesheets/sponsors.less
@@ -21,7 +21,6 @@
   .sponsor-cunnington            { background-image: url('../images/sponsors/auspiciante_cunnington_hover.png'); }
   .sponsor-eda                   { background-image: url('../images/sponsors/auspiciante_eda_hover.png'); }
   .sponsor-fantafestivales       { background-image: url('../images/sponsors/auspiciante_fantafestivales_hover.png'); }
-  .sponsor-festeringslime        { background-image: url('../images/sponsors/auspiciante_festeringslime_hover.png'); }
   .sponsor-filmsharks            { background-image: url('../images/sponsors/auspiciante_filmsharks_hover.png'); }
   .sponsor-findlingfilms         { background-image: url('../images/sponsors/auspiciante_findlingfilms_hover.png'); }
   .sponsor-flaviogrecopaglia     { background-image: url('../images/sponsors/auspiciante_flaviogrecopaglia_hover.png'); }
@@ -59,12 +58,17 @@
   .sponsor-fan                   { background-image: url('../images/sponsors/auspiciante_fan_hover.png'); }
   .sponsor-tvcortos              { background-image: url('../images/sponsors/auspiciante_tvcortos_hover.png'); }
   .sponsor-monster-flex          { background-image: url('../images/sponsors/auspiciante_monster_flex_hover.png'); }
-  .sponsor-netfis                { background-image: url('../images/sponsors/auspiciante_netfis_hover.png'); }
+  .sponsor-neftis                { background-image: url('../images/sponsors/auspiciante_neftis_hover.png'); }
   .sponsor-global-media          { background-image: url('../images/sponsors/auspiciante_global_media_hover.png'); }
   .sponsor-brujas                { background-image: url('../images/sponsors/auspiciante_brujas.png'); }
   .sponsor-museo-sarmiento       { background-image: url('../images/sponsors/auspiciante_museo_sarmiento.png'); }
   .sponsor-pintafan              { background-image: url('../images/sponsors/auspiciante_pintafan.png'); }
-|
+  .sponsor-brigada-problematica  { background-image: url('../images/sponsors/auspiciante_brigada_problematica_hover.png'); }
+  .sponsor-yubari-festival       { background-image: url('../images/sponsors/auspiciante_yubari_festival_hover.png'); }
+  .sponsor-okinawa-film-office   { background-image: url('../images/sponsors/auspiciante_okinawa_film_office_hover.png'); }
+  .sponsor-felices-las-vacas     { background-image: url('../images/sponsors/auspiciante_felices_las_vacas_hover.png'); }
+  .sponsor-no-pain-tattoos       { background-image: url('../images/sponsors/auspiciante_no_pain_tattoos_hover.png'); }
+
   .sponsor-ab:hover                    { background-image: url('../images/sponsors/auspiciante_ab.png'); }
   .sponsor-bsasciudad:hover            { background-image: url('../images/sponsors/auspiciante_bsasciudad.png'); }
   .sponsor-campari:hover               { background-image: url('../images/sponsors/auspiciante_campari.png'); }
@@ -73,7 +77,6 @@
   .sponsor-cunnington:hover            { background-image: url('../images/sponsors/auspiciante_cunnington.png'); }
   .sponsor-eda:hover                   { background-image: url('../images/sponsors/auspiciante_eda.png'); }
   .sponsor-fantafestivales:hover       { background-image: url('../images/sponsors/auspiciante_fantafestivales.png'); }
-  .sponsor-festeringslime:hover        { background-image: url('../images/sponsors/auspiciante_festeringslime.png'); }
   .sponsor-filmsharks:hover            { background-image: url('../images/sponsors/auspiciante_filmsharks.png'); }
   .sponsor-findlingfilms:hover         { background-image: url('../images/sponsors/auspiciante_findlingfilms.png'); }
   .sponsor-flaviogrecopaglia:hover     { background-image: url('../images/sponsors/auspiciante_flaviogrecopaglia.png'); }
@@ -111,10 +114,19 @@
   .sponsor-fan:hover                   { background-image: url('../images/sponsors/auspiciante_fan.png'); }
   .sponsor-tvcortos:hover              { background-image: url('../images/sponsors/auspiciante_tvcortos.png'); }
   .sponsor-monster-flex:hover          { background-image: url('../images/sponsors/auspiciante_monster_flex.png'); }
-  .sponsor-netfis:hover                { background-image: url('../images/sponsors/auspiciante_netfis.png'); }
+  .sponsor-neftis:hover                { background-image: url('../images/sponsors/auspiciante_neftis.png'); }
   .sponsor-global-media:hover          { background-image: url('../images/sponsors/auspiciante_global_media.png'); }
   .sponsor-brujas:hover                { background-image: url('../images/sponsors/auspiciante_brujas_hover.png'); }
   .sponsor-museo-sarmiento:hover       { background-image: url('../images/sponsors/auspiciante_museo_sarmiento_hover.png'); }
   .sponsor-pintafan:hover              { background-image: url('../images/sponsors/auspiciante_pintafan_hover.png'); }
+  .sponsor-brigada-problematica:hover  { background-image: url('../images/sponsors/auspiciante_brigada_problematica.png'); }
+  .sponsor-yubari-festival:hover       { background-image: url('../images/sponsors/auspiciante_yubari_festival.png'); }
+  .sponsor-okinawa-film-office:hover   { background-image: url('../images/sponsors/auspiciante_okinawa_film_office.png'); }
+  .sponsor-felices-las-vacas:hover     { background-image: url('../images/sponsors/auspiciante_felices_las_vacas.png'); }
+  .sponsor-no-pain-tattoos:hover       { background-image: url('../images/sponsors/auspiciante_no_pain_tattoos.png'); }
+
+  // non clickable sponsors
+  .sponsor-mecenazgo-cultural    { background-image: url('../images/sponsors/auspiciante_mecenazgo_cultural.png'); }
+  .sponsor-festeringslime        { background-image: url('../images/sponsors/auspiciante_festeringslime.png'); }
 
 }
