Loading fancybox styles in main.less (previous commits changed order of loading and broke unintentionally the styles of movie/movieblocks in selection page

--- a/assets/stylesheets/main.less
+++ b/assets/stylesheets/main.less
@@ -16,4 +16,5 @@ Author URI:     mailto:author@bars.com
 @import url('./bars.less');
 @import url('./slider.less');
 
+@import url('~fancybox/dist/css/jquery.fancybox.css');
 @import url('~font-awesome/less/font-awesome.less');
