style improvements to BARS selector

--- a/assets/stylesheets/bars.less
+++ b/assets/stylesheets/bars.less
@@ -315,7 +315,7 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
     display: flex;
     overflow: hidden;
     height: @selector-height;
-    width: 200px;
+    width: 150px;
     line-height: normal;
     border-radius: 0;
 
@@ -384,6 +384,10 @@ body { margin: 0; background: url('../images/bgpattern2.png'); overflow-x: hidde
       margin-bottom: 0;
       margin-right: 10px;
       font-size: 16px;
+    }
+
+    .bars-selector {
+      width: 250px;
     }
   }
 }
